Functional for the most part

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -37,7 +37,7 @@
           </div>
           <div class="translation rnaToDna">
             <form action="demo_form.asp" method="get">
-              DNA Strand: <input id="rna" type="text" name="lname"><br>
+              RNA Strand: <input id="rna" type="text" name="lname"><br>
             </form>
             <button class="btn-success" name="hello" value="what" onClick="rnaToDna()"> Translate! </button>
           </div>
