--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -21,7 +21,7 @@
       <div class="row biocontainer" style="text-align: center;">
         <div class="col-md-4 hvr-hang">
           <div style="border: 3px solid black; background-color: white;">
-            Complementary RNA of DNA
+            Translate DNA to Complementary RNA
           </div>
           <div class="translation dnaToRna">
             <form action="demo_form.asp" method="get">
@@ -33,7 +33,7 @@
 
         <div class="col-md-4 hvr-hang">
           <div style="border: 3px solid black; background-color: white;">
-            Complementary DNA of RNA
+            Translate RNA to Complementary DNA
           </div>
           <div class="translation rnaToDna">
             <form action="demo_form.asp" method="get">
@@ -45,7 +45,7 @@
 
         <div class="col-md-4 hvr-hang">
           <div style="border: 3px solid black; background-color: white;">
-            Complementary DNA of DNA
+            Translate DNA to Complementary DNA
           </div>
           <div class="translation complementary">
             <form action="demo_form.asp" method="get">
